--- a/login.html
+++ b/login.html
@@ -6,18 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登入</title>
     <link rel="stylesheet" href="css/all.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,14 +18,17 @@
             <a href="index.html"><img src="image/d’Perfume.png" alt=""></a>
         </div>
         <ul class="navbarMenu d-flex my-auto">
-            <li class="mr32"><a href="product.html"><img src="image/tshirt.svg" alt=""
-                        style="margin-right: 4px;">product</a>
+            <li class="mr32">
+                <a href="product.html"><img src="image/tshirt.svg" alt="" style="margin-right: 4px;">product</a>
             </li>
-            <li class="mr32"><a href="login.html"><img src="image/user-alt.svg" alt="" style="margin-right: 4px;">log in</a>
+            <li class="mr32">
+                <a href="login.html"><img src="image/user-alt.svg" alt="" style="margin-right: 4px;">log in</a>
             </li>
-            <li class="mr32"><a href=""><img src="image/heart.svg" alt="" style="margin-right: 4px;">Wishlist</a>
+            <li class="mr32">
+                <a href=""><img src="image/heart.svg" alt="" style="margin-right: 4px;">Wishlist</a>
             </li>
-            <li><a href=""><img src="image/shopping-cart.svg" alt="" style="margin-right: 4px;">Cart(3)</a>
+            <li>
+                <a href=""><img src="image/shopping-cart.svg" alt="" style="margin-right: 4px;">Cart(3)</a>
             </li>
         </ul>
         <div class="burger">
@@ -41,28 +36,6 @@
         </div>
         <div class="burger hamburger">
             <a href=""><img src="image/bars.svg" alt=""></a>
-        </div>
-        <!-- <div class="burger cross">
-            <a href=""><img src="image/bars.svg" alt=""></a>
-        </div> -->
-        <div class="menu">
-            <ul>
-                <a href="#">
-                    <li>Product</li>
-                </a>
-                <a href="#">
-                    <li>Wishlist</li>
-                </a>
-                <a href="#">
-                    <li>Blog</li>
-                </a>
-                <a href="#">
-                    <li>Contact</li>
-                </a>
-                <a href="#">
-                    <li>Log in</li>
-                </a>
-            </ul>
         </div>
     </div>
     <div class="BGbrand">
@@ -88,21 +61,23 @@
                     <form style="width:100%">
                         <h2 class="mb-md-3" style="font-weight: 800;">Log in</h2>
                         <div class="form-group mt-3">
-                          <label for="exampleInputEmail1">帳號</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email@example.com">
+                            <label for="exampleInputEmail1">帳號</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email@example.com">
                         </div>
                         <div class="form-group mt20">
-                          <label for="exampleInputPassword1">密碼</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            <label for="exampleInputPassword1">密碼</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                         </div>
                         <div class="d-flex justify-content-between mt36">
                             <h6 class="forget">忘記密碼</h6>
                             <div class="d-flex">
                                 <button type="submit" class="btn btnSub mr-2">註冊</button>
-                                <a href="person.html"><div class="btn btn-primary">登入</div></a>
+                                <a href="person.html">
+                                    <div class="btn btn-primary">登入</div>
+                                </a>
                             </div>
                         </div>
-                      </form>
+                    </form>
                 </div>
             </div>
         </div>
@@ -111,7 +86,9 @@
     <div class="BGfooter">
         <div class="footer d-md-flex justify-content-md-between align-items-md-center mx-auto ">
             <div class="d-flex ">
-                <div class="footLogo"><a href="index.html"><img src="./image/d’Perfumew.png" alt=""></a></div>
+                <div class="footLogo">
+                    <a href="index.html"><img src="./image/d’Perfumew.png" alt=""></a>
+                </div>
                 <div class="footCopy">© 2020. All Rights Reserved.</div>
             </div>
             <ul class="footMenu d-flex align-items-md-center ">
