--- a/productinfo.html
+++ b/productinfo.html
@@ -6,18 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>產品列表</title>
     <link rel="stylesheet" href="css/all.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,15 +18,18 @@
             <a href="index.html"><img src="image/d’Perfume.png" alt=""></a>
         </div>
         <ul class="navbarMenu d-flex my-auto">
-            <li class="mr32"><a href="product.html"><img src="image/tshirt.svg" alt=""
-                        style="margin-right: 4px;">product</a>
+            <li class="mr32">
+                <a href="product.html"><img src="image/tshirt.svg" alt="" style="margin-right: 4px;">product</a>
             </li>
-            <li class="mr32"><a href="login.html"><img src="image/user-alt.svg" alt="" style="margin-right: 4px;">log
-                    in</a>
+            <li class="mr32">
+                <a href="login.html"><img src="image/user-alt.svg" alt="" style="margin-right: 4px;">log in
+                </a>
             </li>
-            <li class="mr32"><a href=""><img src="image/heart.svg" alt="" style="margin-right: 4px;">Wishlist</a>
+            <li class="mr32">
+                <a href=""><img src="image/heart.svg" alt="" style="margin-right: 4px;">Wishlist</a>
             </li>
-            <li><a href=""><img src="image/shopping-cart.svg" alt="" style="margin-right: 4px;">Cart(3)</a>
+            <li>
+                <a href=""><img src="image/shopping-cart.svg" alt="" style="margin-right: 4px;">Cart(3)</a>
             </li>
         </ul>
         <div class="burger">
@@ -42,25 +37,6 @@
         </div>
         <div class="burger hamburger">
             <a href=""><img src="image/bars.svg" alt=""></a>
-        </div>
-        <div class="menu">
-            <ul>
-                <a href="#">
-                    <li>Product</li>
-                </a>
-                <a href="#">
-                    <li>Wishlist</li>
-                </a>
-                <a href="#">
-                    <li>Blog</li>
-                </a>
-                <a href="#">
-                    <li>Contact</li>
-                </a>
-                <a href="#">
-                    <li>Log in</li>
-                </a>
-            </ul>
         </div>
     </div>
     <div class="BGbrand">
@@ -93,10 +69,8 @@
                             <option>3</option>
                             <option>4</option>
                         </select>
-                        <button type="submit" class="numShop" style="padding: 5px 40px" data-toggle="modal"
-                            data-target="#add">加入購物車</button>
-                        <div class="modal fade" id="add" tabindex="-1" role="dialog" aria-labelledby="shopModalLabel"
-                            aria-hidden="true">
+                        <button type="submit" class="numShop" style="padding: 5px 40px" data-toggle="modal" data-target="#add">加入購物車</button>
+                        <div class="modal fade" id="add" tabindex="-1" role="dialog" aria-labelledby="shopModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-body modalText">
@@ -110,8 +84,7 @@
                         <img src="image/heartB.svg" alt="">
                         <span>加入我的收藏</span>
                     </div>
-                    <div class="modal fade" id="heartModal" tabindex="-1" role="dialog"
-                        aria-labelledby="heartModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="heartModal" tabindex="-1" role="dialog" aria-labelledby="heartModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-body modalText">
@@ -122,8 +95,8 @@
                     </div>
                     <div class="mt80 mtS40">
                         <h6 style="font-weight: 800;">商品購買須知</h6>
-                        <h6 class="mt-2">產品因拍攝關係顏色可能略有差異，實際以廠商出貨為主。 商品情境照為示意用，僅商品主體不包含其他配件，請以規格內容物為主。 D’Perfume
-                            盡可能確保所列商品備貨充足，但偶爾仍會有產品售罄的情況。如您所訂購的商品庫存不足，我們將盡快以電子郵件通知您。任何訂單變動均會在訂單總額與出貨訊息內更新。</h6>
+                        <h6 class="mt-2">產品因拍攝關係顏色可能略有差異，實際以廠商出貨為主。 商品情境照為示意用，僅商品主體不包含其他配件，請以規格內容物為主。 D’Perfume 盡可能確保所列商品備貨充足，但偶爾仍會有產品售罄的情況。如您所訂購的商品庫存不足，我們將盡快以電子郵件通知您。任何訂單變動均會在訂單總額與出貨訊息內更新。
+                        </h6>
                         <h6 class="mt-3" style="font-weight: 800;">退換貨須知</h6>
                         <h6 class="mt-2">依《消費者保護法》的規定，於全站購物皆享有商品到貨【七日猶豫期】（含例假日）之權益。若收到的商品有任何問題，可於猶豫期內申請退貨。</h6>
                     </div>
@@ -146,7 +119,9 @@
     <div class="BGfooter">
         <div class="footer d-md-flex justify-content-md-between align-items-md-center mx-auto ">
             <div class="d-flex ">
-                <div class="footLogo"><a href="index.html"></a><img src="./image/d’Perfumew.png" alt=""></a></div>
+                <div class="footLogo">
+                    <a href="index.html"></a><img src="./image/d’Perfumew.png" alt=""></a>
+                </div>
                 <div class="footCopy">© 2020. All Rights Reserved.</div>
             </div>
             <ul class="footMenu d-flex align-items-md-center ">
