--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <a href="product.html"><img src="image/tshirt.svg" alt="" style="margin-right: 4px;">product</a>
             </li>
             <li class="mr32">
-                <a href=""><img src="image/user-alt.svg" alt="" style="margin-right: 4px;">log in</a>
+                <a href="login.html"><img src="image/user-alt.svg" alt="" style="margin-right: 4px;">log in</a>
             </li>
             <li class="mr32">
                 <a href=""><img src="image/heart.svg" alt="" style="margin-right: 4px;">Wishlist</a>
             </li>
             <li>
-                <a href=""><img src="image/shopping-cart.svg" alt="" style="margin-right: 4px;">Cart(3)</a>
+                <a href="login.html"><img src="image/shopping-cart.svg" alt="" style="margin-right: 4px;">Cart(3)</a>
             </li>
         </ul>
         <div class="burger">
