--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <h1>Perfume your day</h1>
                         <h4>A perfume is like a piece of clothing, a message, a way of presenting oneself a costume that according to the person who wears it.</h4>
                     </div>
-                    <div class="bannerShop">Shop Now</div>
+                    <a href="product.html"><div class="bannerShop">Shop Now</div></a>
                 </div>
             </div>
         </div>
